--- a/angular/app/index.html
+++ b/angular/app/index.html
@@ -3,18 +3,43 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <link type="text/css" rel="stylesheet" href="../bower_components/angular-material/angular-material.min.css">
+    <link type="text/css" rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+    <link type="text/css" rel="stylesheet" href="scss/foodie.css">
 </head>
 <body ng-app="foodie">
-    <div ui-view="">
-
+    <md-toolbar>
+        <h2 class="md-toolbar-tools"><span>GudFud</span></h2>
+    </md-toolbar>
+    <div class="fd-main-container" ui-view="">
     </div>
 
-    <script src="../bower_components/angular/angular.js"></script>
-    <script src="../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="../bower_components/oauth.io/dist/oauth.js"></script>
 
-    <script src="app.js"></script>
-    <script src="modules/login/login.module.js"></script>
+<script src="../bower_components/angular/angular.js"></script>
+<script src="../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+<script src="../bower_components/oauth.io/dist/oauth.js"></script>
+<script src="../bower_components/angular-animate/angular-animate.min.js"></script>
+<script src="../bower_components/angular-aria/angular-aria.min.js"></script>
+<script src="../bower_components/angular-material/angular-material.min.js"></script>
+
+
+<script src="app.js"></script>
+
+<script src="modules/services/user.service.js"></script>
+<script src="modules/services/order.service.js"></script>
+
+<script src="modules/login/login.module.js"></script>
 <script src="modules/login/js/login.controller.js"></script>
+
+<script src="modules/registration/registration.module.js"></script>
+<script src="modules/registration/js/registration-profile.controller.js"></script>
+
+<script src="modules/order/order.module.js"></script>
+<script src="modules/order/js/menu.controller.js"></script>
+<script src="modules/order/js/order-confirmation.controller.js"></script>
+
+<script src="//localhost:35729/livereload.js"></script>
+
 </body>
 </html>
