--- a/angular/app/modules/login/html/login.html
+++ b/angular/app/modules/login/html/login.html
@@ -1,3 +1,3 @@
-<button ng-click="loginBK('facebook')">Facebook</button>
-<button ng-click="loginBK('google')">Google</button>
+<button ng-click="login('facebook')">Facebook</button>
+<button ng-click="login('google')">Google</button>
 {{ login }}
